# rust-web-server

./: Cargo.toml  data.json  readme.md
migrations/: 20230526112452_Add_Users_Table.down.sql  20230526112452_Add_Users_Table.up.sql
public/: index.html
src/: db.rs  main.rs  types.rs
src/constants/: enums.rs
src/routes/: mod.rs  users.rs
src/utils/: mod.rs  request.rs  response.rs
