[package]
name = "server"
version = "0.1.0"
edition = "2021"

[scripts]
start = "cargo watch -x run"

[dependencies]
dotenv = "0.15.0"
postgres = "0.19.5"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
serde = {version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = {version = "1.28.1", features = ["full"]}
