[package]
name = "server"
version = "0.1.0"
edition = "2021"

[scripts]
start = "cargo watch -x run"

[dependencies]
dotenv = "0.15.0"
serde = {version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = {version = "1.28.1", features = ["full"]}

